# New-

./: .env.sample  .gitignore  INSTALL.md  README.md  docker-compose.yml  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml
apps/mobile/: App.tsx  app.json  package.json
apps/web/: README.md  next.config.js  package.json  tailwind.config.ts  tsconfig.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/components/: ClientNav.tsx  FeedCard.tsx
db/cassandra/: alter_advanced.cql  schema.cql
db/opensearch/: advanced_idx_templates.md  posts_idx.json  shops_idx.json  users_idx.json
db/postgres/migrations/: 0001_init.sql  0002_advanced.sql  0003_vector_indexes.sql  0004_more_advanced.sql  0005_2fa.sql
db/redis/: keys.md
docs/: uiux.md
infra/prometheus/: prometheus.yml
scripts/seed/: seed-dev.js
services/ai/: Dockerfile  pyproject.toml
services/ai/app/: main.py  recs.py
services/api/: Dockerfile  jest.config.ts  package.json  tsconfig.json
services/api/src/: main.ts
services/api/test/: health.e2e.test.ts
services/media/: Cargo.toml  Dockerfile
services/media/src/: main.rs
services/realtime/: Dockerfile  go.mod  main.go
snapzy/: .env.sample  .gitignore  INSTALL.md  README.md  docker-compose.yml  package.json
snapzy/.github/workflows/: ci.yml
snapzy/db/cassandra/: schema.cql
snapzy/db/opensearch/: posts_idx.json  shops_idx.json  users_idx.json
snapzy/db/redis/: KEYS.md
snapzy/docs/: FEATURES.md
snapzy/infra/observability/: loki-config.yaml  prometheus.yml
snapzy/seeds/: seed.js
snapzy/services/ai/: Dockerfile  (+2 more)
(+87 files in other folders)
