[project]
name = "snapzy-ai"
version = "0.1.0"
description = "Snapzy AI microservice for moderation, recs, captions"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.115.0",
  "uvicorn[standard]==0.30.6",
  "pydantic==2.8.2",
  "requests==2.32.3",
  "sentence-transformers==3.0.1",
  "numpy==1.26.4"
]

[tool.uvicorn]
factory = false